implementacion de observerRemoto y parte de RMI (Cliente Servidor y ajustes varios)